Experimental JVM settings for server script